--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <input type="text" name="itemName" id="add-item-name">  
             </p>
             <p>
-            <label for="item-movable"></label>
+            <label for="item-movable">Movable</label>
             <input type="checkbox" name="itemMovable" id="item-movable">
             </p>
             <button style="padding:5px" type="submit">ADD <span id="loading-indicator" class="htmx-indicator">Loading...</span></button>
