add style for loading

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <label for="item-movable">Movable</label>
             <input type="checkbox" name="itemMovable" id="item-movable">
             </p>
-            <button style="padding:5px" type="submit">ADD <span id="loading-indicator" class="htmx-indicator">Loading...</span></button>
+            <button style="padding:5px" type="submit">ADD <span style="border:1px solid darkred" id="loading-indicator" class="htmx-indicator">Loading...</span></button>
         </form>
     </section>
 </body>
